# Nutritional-RAG

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
apps/api/: Dockerfile  main.py
apps/ui/: Dockerfile  Home.py
data/eval/: nutrition_eval_set.ndjson  nutrition_external_sources_eval_set.ndjson
etl/: pubmed_topics.example.json  pubmed_topics.smoke.json  sources.bodybuilding.example.json  sources.example.json  sources.harvard_news.example.json  sources.pubmed.example.json  sources.youtube.example.json
etl/samples/: foods.csv  guidelines.json
infra/grafana/provisioning/dashboards/: dashboard.yml  nutritional-rag-overview.json
infra/mlflow/: Dockerfile
infra/prometheus/: prometheus.yml
scripts/: batch_pubmed_topics.py  demo_grafana_traffic.sh  evaluate_rag.py  simulate_traffic.py  sweep_eval.py
src/nutritional_rag/: api.py  settings.py
src/nutritional_rag/etl/: __init__.py  chunk.py  cli.py  extract.py  load.py  models.py  pipeline.py  pubmed_batch.py  transform.py
tests/: test_api.py  test_chunk.py  test_chunk_pipeline.py  test_extract_formats.py  test_extract_pipeline.py  test_load.py  test_load_pipeline.py  test_pubmed_batch.py  test_transform.py  test_transform_pipeline.py
tests/fixtures/extract/: article.html
