[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutritional-rag"
version = "0.1.0"
description = "Repository scaffold for a nutritional RAG system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pinecone>=5.4,<6.0",
  "openai>=1.52,<2.0",
  "redis[hiredis]>=5.1,<6.0",
  "prometheus-client>=0.21,<1.0",
  "pydantic-settings>=2.6,<3.0",
]
etl = [
  "langchain>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-pinecone>=0.2,<0.3",
  "pypdf>=5.1,<6.0",
  "openai>=1.52,<2.0",
  "pinecone>=5.4,<6.0",
  "pydantic-settings>=2.6,<3.0",
]
ui = [
  "streamlit>=1.39,<2.0",
  "requests>=2.32,<3.0",
]
ml = [
  "mlflow>=2.17,<3.0",
  "torch>=2.4,<3.0",
  "sentence-transformers>=3.2,<4.0",
]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.7,<0.8",
  "httpx>=0.27,<0.28",
  "pypdf>=5.1,<6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
